# plantvillage-study

./: .gitignore  README.md  pyproject.toml  shell.nix
data/output/: benchmark_results_20251129_034022.json  benchmark_results_20251129_130343.json  benchmark_results_20251129_150118.json  benchmark_results_20251129_164557.json  benchmark_results_final.json  plantdoc_test_results_20251129_150802.json  plantdoc_test_results_20251129_155351.json  plantdoc_test_results_20251129_183723.json  plantdoc_test_results_20251129_183818.json  plantdoc_test_results_20251129_185018.json
data/results/: combined_results.json  plantdoc_test_results_combined.json
data/results/new_charts/: performance_metrics_table.csv  plantdoc_performance_metrics_table.csv
latex/: main.bib  main.tex  preamble.tex
latex/sec/: 0_abstract.tex  1_2_related_work.tex  1_intro.tex  2_formatting.tex  2_related_work.tex  3_appendix.tex  3_dataset.tex  3_method.tex  4_implementation.tex  4_methodology.tex  5_model.tex  5_results.tex  6_Conclusion.tex  6_conclusion.tex  x_appendix.tex
notebooks/: Preprocessing.ipynb  benchmark.py  data_analysis.ipynb  data_analysis.py  data_combine.ipynb  model_comparison.ipynb  plots.ipynb  pytorch_model.ipynb  results_and_plots.ipynb  tensorflow_model.ipynb  test.ipynb  test_plant_doc.py  test_plant_doc_mps.py  testing_leaf.ipynb
notebooks/results/: LW_models_training_history.json  all_models_training_history_pratyaksh.json  metrics.csv  metrics_old.csv
