[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "tensorflow-datasets>=4.9.9",
    "tensorflow[and-cuda]>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
